Don't call initbufs before audio_set_defaults.  It is called in audiosetinfo anyway.

Addresses PR kern/51707.